<resources>
    <string name="app_name">StudyEz</string>
    <string name="action_settings">Settings</string>

    <!-- Splash -->
    <string name="splash_text">Study EZ</string>
    <string name="app_activity_splash">Splash</string>
    <string name="cancelled">Cancelled!</string>

    <!-- Toolbar Titles -->
    <string name="toolbar_home">Home</string>
    <string name="toolbar_profile">My Profile</string>
    <string name="toolbar_decks">My Decks</string>
    <string name="toolbar_about">About Us</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_community">Community</string>

    <!-- Toolbar Sub Titles -->
    <string name="toolbar_quickStudy">Quick Study</string>
    <string name="toolbar_studySessionCompleted">"Study Session Completed!"</string>
    <string name="toolbar_stats">"Statistics"</string>

    <!-- Component ID's -->
    <string name="Deck_Fab">DeckFAB</string>
    <string name="Deck_Fab_Clicked">Create New Deck FAB Clicked</string>

    <!--  User Profile  -->
    <string name="profile_desc">A simple description about you or whatever you wish to put here describing yourself :)</string>
    <string name="profile_title">Alex</string>
    <string name="posts">Decks</string>
    <string name="ez_points">Ez Points</string>
    <string name="Friends">Friends</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
</resources>